# querystall

./: CMakeLists.txt  README.md  main.c
glad/include/glad/: glad.h
glad/src/: glad.c
